--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dva Demo</title>
-  <link rel="stylesheet" href="index.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Dva Cnode</title>
 </head>
+
 <body>
 
-  <div id="root"></div>
-  <script src="index.js"></script>
+    <div id="root"></div>
+    <script src="index.js"></script>
 
 </body>
+
 </html>
